# cicd-for-eks

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  GitVersion.yml  README.md
.github/workflows/: build-test-deploy.yml  call-deploy.yml  cleanup-pr-deployments.yml  deploy.yml  docker-build.yml  reinstall-pr-deployment.yml  semantic-release.yml  test-deploy.yml  validate.yml
helm-charts/: Makefile  deploy.sh
helm-charts/ping-pong/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm-charts/ping-pong-rendered/ping-pong/templates/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm-charts/ping-pong/templates/: deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.py  wsgi.py
src/html/: index.html
